# assistente_virtual

./: pyproject.toml
src/: main.py  spotify.py
