[tool.poetry]
name = "assistente-virtual"
version = "0.1.0"
description = ""
authors = ["Gabriel Vilarino <gabriel_vilarino@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
speechrecognition = "^3.10.3"
pyaudio = "^0.2.14"
pyttsx3 = "^2.90"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
